--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,4 @@
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -57,20 +58,47 @@ html, body {
 }
 
 h1, h2, h3, h4, h5 {
-    font-size: 18px;
-    margin-bottom: 15px;
+    font-size: 30px;
+    margin-bottom: 5px;
     font-family: 'Rubik', sans-serif;
+    /*font-family: 'Bangers', cursive;*/
 }
 
 p {
     line-height: 1.4;
+    font-size: 20px;
 }
 
 .container {
-    width: 800px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
+header img{
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+header nav{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+    align-items: baseline;
+
+}
+header nav a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+.container .banner{
+    height:190px;
+}
 .top-content {
     display: flex;
     flex-wrap: wrap;
@@ -80,46 +108,92 @@ p {
 }
 
 .top-content .text-container {
-    width: 48%;
+    margin-left: 20px;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
+    width: 400px;
+    margin-top: 30px;
+    margin-right: 20px;
 }
 
 .middle-content {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    /* justify-content: center; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .middle-content h2 {
-    padding: 0 2%;
+    padding: 6px 2%;
+    padding-left: 30px;
     margin-bottom: 0;
 }
 
 .middle-content .boxes {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     background: black;
-    margin: 20px 2.5%;
+    /* margin: 21px 20px; */
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+    /* margin: 0px 50px 0px 50px; */
+    margin: 5px 50px 5px 50px;
+    font-size: 25px;
+}
+.container .middle-content .boxes #box1{
+    background-color: cadetblue;
+}
+.container .middle-content .boxes #box2{
+    background-color: gold;
+}
+.container .middle-content .boxes #box3{
+    background-color: lightseagreen;
+}
+.container .middle-content .boxes #box4{
+    background-color: coral;
+}
+.container .middle-content .boxes #box5{
+    background-color: crimson;
+}
+.container .middle-content .boxes #box6{
+    background-color: green;
+}
+.container .middle-content .boxes #box7{
+    background-color: rebeccapurple;
+}
+.container .middle-content .boxes #box8{
+    background-color: palevioletred;
+}
+.container .middle-content .boxes #box9{
+    background-color: indigo;
+}
+.container .middle-content .boxes #box10{
+    background-color: dodgerblue;
 }
 
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .bottom-content .text-container {
-    padding-right: 4%;
+    width: 320px;
+    margin-top: 15px;
+    margin-bottom: 10px;
 }
 
 .bottom-content .text-container:last-child {
@@ -132,15 +206,23 @@ footer {
 }
 
 footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
-    font-size: 14px;
+        /* align-content: flex-start; */
+        display: flex;
+        width: 70%;
+        justify-content: center;
+        /* align-items: center; */
+        /* flex-direction: column; */
+        padding: 20px 2%;
+        font-size: 10px;
+        /* margin-right: 50px; */
+        flex-wrap: wrap;
+        
 }
 
 footer nav a {
     color: white;
     text-decoration: none;
+    margin: 5px;
+    font-size: 20px;
+    margin-right: 50px;
 }
